Simplified some code in parabola.js, added white background to header icons, fixed alerts not showing up in the settings, wrote first part of changelog

--- a/timeweb/timewebapp/static/css/index.css
+++ b/timeweb/timewebapp/static/css/index.css
@@ -64,7 +64,11 @@ header.animate::after {
     z-index: 1000;
     right: 225px;
     bottom: 5px;
+    background: white;
     visibility: hidden;
+}
+#next-day-icon-label {
+    padding-right: 5px;
 }
 #assignments-header img#close-assignments:hover ~ div#close-assignments-icon-label,
 #assignments-header img#open-assignments:hover ~ div#open-assignments-icon-label,
